# rustiki

./: .gitignore  Dockerfile  MoonZoon.toml  README.md
backend/: Cargo.toml
backend/config/db/: schema.yaml
backend/src/: firebase.rs  login.rs  main.rs  models.rs  up_msg_handler.rs
backend/src/models/: article.rs  mod.rs  user.rs
backend/src/up_msg_handler/: add_article.rs  article.rs  delete_article.rs  edit_article.rs  get_articles.rs  login.rs  mod.rs  registration.rs
frontend/: Cargo.toml
frontend/multiline_crate/: text_area.rs
frontend/rich_text/: quill_controller.js
frontend/src/: app.rs  connection.rs  edit_article_page.rs  footer.rs  header.rs  lib.rs  log_in_page.rs  new_article_page.rs  registration_page.rs  rich_text.rs  router.rs  view_article_page.rs
frontend/src/app/: view.rs
frontend/src/components/navigation/: header.rs
frontend/src/elements/: button.rs  dialogs.rs  footer.rs  header.rs  layouts.rs  mod.rs  panel.rs  tags.rs
frontend/src/pages/: mod.rs
frontend/src/pages/create_article_page/: mod.rs  view.rs
frontend/src/pages/edit_article_page/: mod.rs  view.rs
frontend/src/pages/home_page/: mod.rs  view.rs
frontend/src/pages/log_in_page/: mod.rs  view.rs
frontend/src/pages/registration_page/: mod.rs  view.rs
frontend/src/pages/view_article_page/: mod.rs  view.rs
public/css/: quill_snow.css
shared/: Cargo.toml
shared/src/: lib.rs
