[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/MoonZoon/demo"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "MoonZoon demo"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
#moon = { git = "https://github.com/MoonZoon/MoonZoon", rev = "15cb619faca5f78a47e08f4af4bfa595f0eb64b1" }
moon = { git = "https://github.com/lindahageselle/MoonZoon", rev = "ce3e2bd" }
shared = { path = "../shared" }
fireauth = "0.1.5"
anyhow = "1.0.56"
aragog = "0.16.1"
rust_arango = { version = "0.1" }
serde = "1.0.136"
rand = "0.8.5"