[package]
version = "0.1.0"
name = "backend"
repository = "https://github.com/MoonZoon/demo"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "MoonZoon demo"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[dependencies]
moon = { git = "https://github.com/MoonZoon/MoonZoon", rev="5769c15" }
shared = { path = "../shared" }
fireauth = "0.1.5"
aragog = "0.16.1"
serde = "1.0.136"
rand = "0.8.5"
tokio-test = "0.4.2"