[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/MoonZoon/MoonZoon"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "MoonZoon demo"
categories = ["MoonZoon", "example"]
license = "MIT"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#zoon = { git = "https://github.com/MoonZoon/MoonZoon", rev="45f9d0b" }
zoon = { git = "https://github.com/lindahageselle/MoonZoon", rev = "ce3e2bd" }
rand = { version = "0.8.3", features = ["small_rng", "getrandom"], default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
shared = { path = "../shared" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

